@@ -27,6 +27,7 @@ install::
 	$(call installdata,templates.xml,$(prefix)/config)
 	$(call installdata,convertssl.py,$(prefix)/config)
 	$(call installdata,upgradeicegrid.py,$(prefix)/config)
+	$(call installdata,icegrid-slice.3.0.ice.gz,$(prefix)/config)
 
 $(EVERYTHING)::
 	@for subdir in $(SUBDIRS); \
