@@ -1,6 +1,8 @@
 Changes since version 3.1.0
 ---------------------------
 
+- The demos are not longer included in the RPM distribution.
+
 - For object adapters without endpoints, Ice.Trace.Network >= 2 now
   prints a trace message.
 
